--- a/index.html
+++ b/index.html
@@ -3,9 +3,22 @@
 <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="css/style.css">
-    <title>Document</title>
+    <title>Nextmove</title>
 </head>
 <body>
-    
+    <header>
+        <nav>
+            <a class="logo" href="/"><img src="img/Logo.svg" alt="logo"></a>
+            <a href="/">Product</a>
+            <a href="/">Services</a>
+            <a href="/">Resources</a>
+            <a href="/">Offers</a>
+            <a class="contactus" href="">Contact us</a>
+        </nav>
+    </header>
+    <main>
+        <h1>Simple, transparent business credit cards</h1>
+        <p>Mo money, no problems. Untitled is a next-generation financial technology company in the process of reinventing banking. 30-day free trial.</p>
+    </main>
 </body>
 </html>
