--- a/index.html
+++ b/index.html
@@ -7,18 +7,33 @@
 </head>
 <body>
     <header>
-        <nav>
-            <a class="logo" href="/"><img src="img/Logo.svg" alt="logo"></a>
-            <a href="/">Product</a>
-            <a href="/">Services</a>
-            <a href="/">Resources</a>
-            <a href="/">Offers</a>
-            <a class="contactus" href="">Contact us</a>
-        </nav>
+        <div class="container">
+            <div class="logo">
+                <a href=""><img src="img/Logo.svg" alt="logo"></a>
+            </div>
+            <nav class="menu">
+                <ul>
+                    <li><a href="#">Product</a></li>
+                    <li><a href="#">Services</a></li>
+                    <li><a href="#">Resources</a></li>
+                    <li><a href="#">Offers</a></li>
+                </ul>
+            </nav>
+            <div class="contact"><a href="#">Contact us</a></div>
+        </div>
     </header>
     <main>
-        <h1>Simple, transparent business credit cards</h1>
-        <p>Mo money, no problems. Untitled is a next-generation financial technology company in the process of reinventing banking. 30-day free trial.</p>
+        <div class="center">
+            <h1>Simple, transparent business credit cards</h1>
+            <p>Mo money, no problems. Untitled is a next-generation financial technology company in the process of reinventing banking. 30-day free trial.</p>
+            <a class="joinnow" href="">Join now</a>
+            <ul class="watch">
+                <li>
+                    <img class="group" src="img/Interface, Essential/Group.svg" alt="group">
+                    <a href="/">Watch video here</a>
+                </li>
+            </ul>
+        </div>
     </main>
 </body>
 </html>
