update css & html

--- a/index.html
+++ b/index.html
@@ -27,12 +27,10 @@
             <h1>Simple, transparent business credit cards</h1>
             <p>Mo money, no problems. Untitled is a next-generation financial technology company in the process of reinventing banking. 30-day free trial.</p>
             <a class="joinnow" href="">Join now</a>
-            <ul class="watch">
-                <li>
-                    <img class="group" src="img/Interface, Essential/Group.svg" alt="group">
-                    <a href="/">Watch video here</a>
-                </li>
-            </ul>
+            <div class="watch-video">
+                <img src="img/Interface, Essential/Group.svg" alt="Play Icon" class="play-icon">
+                <a href="#" class="watch">Watch video here</a>
+            </div>
         </div>
     </main>
 </body>
