--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="css/style.css" />
-    <link rel="shortcut icon" href="img/icon.svg" />
+    <link rel="icon" href="img/icon.svg" />
     <title>Nextmove</title>
 </head>
 <body>
