--- a/index.html
+++ b/index.html
@@ -8,31 +8,34 @@
 </head>
 <body>
     <header>
-        <div class="container">
-            <div class="logo">
-                <a href=""><img src="img/Logo.svg" alt="logo"></a>
-            </div>
-            <nav class="menu">
-                <ul>
-                    <li><a href="#">Product</a></li>
-                    <li><a href="#">Services</a></li>
-                    <li><a href="#">Resources</a></li>
-                    <li><a href="#">Offers</a></li>
-                </ul>
-            </nav>
-            <div class="contact"><a href="#">Contact us</a></div>
+        <div class="headerContainer">
+          <div class="logo">
+            <a href=""><img src="img/Logo.svg" alt="Logo" title="logo"></a>
+          </div>
+          <div class="navigation">
+            <a href="#" class="nav_items">Product</a>
+            <a href="#" class="nav_items">Services</a>
+            <a href="#" class="nav_items">Resources</a>
+            <a href="#" class="nav_items">Offers</a>
+          </div>
+          <button class="contact_us">Contact us</button>
         </div>
-    </header>
+      </header>
     <main>
-        <div class="center">
+        <div class="mainContainer">
             <h1>Simple, transparent business credit cards</h1>
             <p>Mo money, no problems. Untitled is a next-generation financial technology company in the process of reinventing banking. 30-day free trial.</p>
-            <a class="joinnow" href="">Join now</a>
-            <div class="watch-video">
-                <img src="img/Interface, Essential/Group.svg" alt="Play Icon" class="play-icon">
-                <a href="#" class="watch">Watch video here</a>
+            <div class="buttonJoin">
+                <a class="joinNow" href="/">Join now</a>
+                <div class="watchVideo">
+                    <img src="img/Group.svg" alt="Play-Icon" class="play-icon" title="play-icon">
+                    <a href="/" class="watch">Watch video here</a>
+                </div>
             </div>
         </div>
+        <div class="cardsLeft">
+            <img src="img/Cards.svg" alt="Cards" title="card" />
+          </div>
     </main>
 </body>
 </html>
