--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <a href="#" class="nav_items">Resources</a>
             <a href="#" class="nav_items">Offers</a>
           </div>
-          <button class="contact_us">Contact us</button>
+          <button class="contact_us"><a href="/">Contact us</a></button>
         </div>
       </header>
     <main>
